<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/backdropImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/loading"
        app:layout_constraintBottom_toTopOf="@+id/item_detail_image"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/item_detail_image"
        android:layout_width="150dp"
        android:layout_height="210dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="50dp"
        android:scaleType="fitXY"
        android:src="@drawable/loading"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/item_detail_name"
        style="@style/text_detail_bold_16sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/item_detail_image"
        app:layout_constraintTop_toBottomOf="@id/backdropImage"
        tools:text="@string/dummy_name" />

    <TextView
        android:id="@+id/title_date"
        style="@style/text_detail_bold_14sp"
        android:layout_width="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/item_detail_image"
        app:layout_constraintTop_toBottomOf="@+id/item_detail_name"
        android:text="@string/first_release" />

    <TextView
        android:id="@+id/item_detail_date"
        style="@style/text_detail_regular"
        android:layout_width="0dp"
        android:layout_marginStart="10dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/item_detail_image"
        app:layout_constraintTop_toBottomOf="@+id/title_date"
        tools:text="@string/dummy_date" />


    <TextView
        android:id="@+id/title_overview"
        style="@style/text_detail_bold_16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_detail_image"
        android:text="@string/overview" />

    <TextView
        android:id="@+id/item_detail_overview"
        style="@style/text_detail_regular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_overview"
        tools:text="@string/dummy_overview" />


    <FrameLayout
        android:id="@+id/frameLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/appbarColor"
        android:visibility="visible"
        android:alpha=".90">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.github.ybq.android.spinkit.SpinKitView
                android:id="@+id/progressBar"
                style="@style/SpinKitView.DoubleBounce"
                android:layout_width="90dp"
                android:layout_height="90dp"
                app:SpinKit_Color="@color/yellow"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.39" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>