<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/btnShare"
        app:showAsAction="always"
        android:icon="@drawable/ic_share_white"
        android:title="@string/share"/>

    <item
        android:id="@+id/btnFav"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_favorite_selector"
        android:title="@string/favorite"/>
</menu>