<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.favorite.tv.TvFavoriteFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tvShow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        tools:listitem="@layout/item_card_layout"/>


</FrameLayout>